--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.1",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "dotenv": "^8.0.0",
