--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "google-map-react": "^1.1.4",
+    "google-maps-react": "^2.0.2",
     "massive": "^5.11.0",
+    "material-auto-rotating-carousel": "^3.0.1",
+    "material-ui": "^0.20.2",
+    "material-ui-carousel": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-easy-swipe": "0.0.18",
     "react-redux": "^7.1.0",
+    "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-swipeable-views": "^0.13.3",
     "redux": "^4.0.1"
   },
   "scripts": {
