--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.1.1",
+    "@material-ui/icons": "^4.2.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "fg-loadcss": "^2.1.0",
     "google-map-react": "^1.1.4",
     "google-maps-react": "^2.0.2",
     "massive": "^5.11.0",
     "material-auto-rotating-carousel": "^3.0.1",
     "material-ui": "^0.20.2",
     "material-ui-carousel": "^1.0.0",
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-easy-swipe": "0.0.18",
