--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-swipeable-views": "^0.13.3",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-promise-middleware": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
