--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "material-ui-carousel": "^1.0.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.8.6",
+    "react-basket": "^0.2.1",
     "react-dom": "^16.8.6",
     "react-easy-swipe": "0.0.18",
     "react-redux": "^7.1.0",
