--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.2.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
@@ -27,9 +28,12 @@
     "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-swipeable-views": "^0.13.3",
+    "react-toastify": "^5.3.1",
     "redux": "^4.0.1",
-    "redux-promise-middleware": "^6.1.1"
+    "redux-promise-middleware": "^6.1.1",
+    "stripe": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
